<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">






    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:background="@drawable/bg"
        >



        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center"
            android:layout_gravity="top"
            android:padding="20dp"
            android:background="@drawable/roundshape3"
            tools:context="com.converter.android.dailyhoroscope.WhichActivity">



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >

                <TextView
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/birthday"
                    android:id="@+id/textBirthday" />
            </TableRow>

            <TableRow android:paddingTop="@dimen/padding2">

                <TextView
                    android:textColor="@color/orange"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/day"
                    android:id="@+id/textDay" />

                <Spinner

                    android:paddingLeft="@dimen/padding2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/day"
                    android:id="@+id/spinnerDay" />
            </TableRow>

            <TableRow
                android:paddingTop="@dimen/padding2">

                <TextView
                    android:textColor="@color/orange"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/month"
                    android:id="@+id/textMonth" />


                <Spinner
                    android:paddingLeft="@dimen/padding2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/month"
                    android:id="@+id/spinnerMonth" />


            </TableRow>
        </TableLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <Button
                android:id="@+id/buttonWhich"
                android:gravity="center"
                android:background="@drawable/roundshape3_selector"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:textStyle="bold"
                android:textColor="@color/orange"
                android:textSize="12dp"
                android:onClick="onClick"
                android:text="@string/which"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
